@@ -27,7 +27,8 @@
 #define QJACKCTL_TITLE      PACKAGE_NAME
 #define QJACKCTL_VERSION    PACKAGE_VERSION
 
-#define QJACKCTL_SUBTITLE1  "JACK Audio Connection Kit"
+#define QJACKCTL_SUBTITLE0  "JACK"
+#define QJACKCTL_SUBTITLE1  QJACKCTL_SUBTITLE0 " Audio Connection Kit"
 #define QJACKCTL_SUBTITLE2  "Qt GUI Interface"
 
 #define QJACKCTL_SUBTITLE   QJACKCTL_SUBTITLE1 " - " QJACKCTL_SUBTITLE2
