@@ -5,6 +5,16 @@ ChangeLog
 
 CVS HEAD
 
+- The post-shutdown script is now also called when using the Stop button,
+  whether the jackd server has been started internally or not. The initial
+  hard-coded default is now on and set as `killall jackd` (as a workaround
+  on a old request from Stephane Letz).
+
+- The main window buttons display is now optional. One can choose now
+  whether the left, right and/or transport buttons are visible, making
+  it for a total six different modes of the main window presentation
+  (after a much simpler suggestion from Paul Davis and Stephane Letz).
+
 - Added configure support for x86_64 libraries (UNTESTED).
 
 
